--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex2</title>
 </head>
+
 <body>
-    <h1>Addition Of Two Number</h1><hr>
-    <input id="first_element"  placeholder="Enter The First value"/>
-    <input id="second_element" placeholder="Enter The Second value "/>
+    <h1>Addition Of Two Number</h1>
+    <hr>
+    <input id="first_element" placeholder="Enter The First value" />
+    <input id="second_element" placeholder="Enter The Second value " />
     <button id="click">Click Me</button>
 
 </body>
+
 </html>
